compiler/testData/diagnostics/tests/enum/inner/insideInnerClassNotAllowed.kt
class A {
    inner class B {
        enum class <!NESTED_CLASS_NOT_ALLOWED!>E<!> {
            ENTRY
        }
    }
}
